Fix code wrapping issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -351,7 +351,8 @@ pre {
 
 pre code, tt {
     font-size: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
+    word-wrap: normal;
     background: transparent;
     border: none;
     padding: 0;
